--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="full-bg">
         <div class="overlay">
 
-            <a href="#" class="back-btn" id="back-btn" style="display: none; color: #fff"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i>Back</a>
+            <a href="/index.html" class="back-btn" id="back-btn" style="display: none; color: #fff"><i class="fas fa-arrow-left">&nbsp&nbsp</i>Back</a>
 
 
-        <div class="brand-title-mobile" id="brand-title-mobile"><img src="https://img.icons8.com/plasticine/40/000000/leaf.png"/>Agrihub</div>
+        <div class="brand-title-mobile" id="brand-title-mobile"><img src="https://img.icons8.com/plasticine/40/000000/leaf.png"/>Agriculhub</div>
         <!----- navbar ----->
         <nav class="navbar">
-           <div class="brand-title"><img src="https://img.icons8.com/plasticine/45/000000/leaf.png"/>Agrihub</div>
+           <div class="brand-title"><img src="https://img.icons8.com/plasticine/45/000000/leaf.png"/>Agriculhub</div>
            <a href="#" class="toggle-button">
                <span class="bar"></span>
                <span class="bar"></span>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="sign-in_sign-up_container_mobile">
-                <a href="#" class="sign-in-btn" id="sign-in-btn">Sign in</a>
+                <a href="/sign-in.html" class="sign-in-btn" id="sign-in-btn">Sign in</a>
                 <div class="sign-up-btn" id="sign-up-btn">
                     <div class="box">
                     <form class="form-container-mobile" id="form-container-mobile">
@@ -92,7 +92,14 @@
                         </div>
                     </form>
                     </div>
-                    Sign up
+                    <div class="sign-up-text-container">
+                        <p class="sign-up" id="sign-up">Sign up</p><button type="submit" class="sign-up-button-mobile" id="sign-up-button-mobile"><i class="fas fa-arrow-circle-right"></i></button>
+                    </div>
+                    <br>
+                    <div class="already-have-an-acc" id="already-have-an-acc">
+                        <small class="sign-in-mobile"> Already have an account? <a href="./sign-in.html" class="sign-in-text">Sign In</a></small>
+                    </div>
+
                 </div>
             </div>
 
