--- a/index.html
+++ b/index.html
@@ -60,24 +60,24 @@
                 <main class="main-container">
                     <div class="container">
 
-                        <div class="carousel">
+                        <div class="carousel w-100">
                             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
-                                    <div class="carousel-item active w-auto" data-bs-interval="5000">
+                                    <div class="carousel-item active" data-bs-interval="5000">
                                         <img src="images/tim-mossholder-4DLnYJQE6kw-unsplash (1).jpg"
-                                            class="d-none d-xl-block" alt="...">
+                                            class="d-none d-xl-block" alt="fields of green">
                                     </div>
-                                    <div class="carousel-item w-auto" data-bs-interval="5000">
+                                    <div class="carousel-item" data-bs-interval="5000">
                                         <img src="images/tim-mossholder-xDwEa2kaeJA-unsplash.jpg"
-                                            class="d-none d-xl-block" alt="...">
+                                            class="d-none d-xl-block" alt="harvestors picking strawberries">
                                     </div>
-                                    <div class="carousel-item w-auto" data-bs-interval="5000">
+                                    <div class="carousel-item" data-bs-interval="5000">
                                         <img src="images/tim-shepherd-jaPjICK8ee8-unsplash.jpg"
-                                            class="d-none d-xl-block" alt="...">
+                                            class="d-none d-xl-block" alt="workers planting at a rice paddy">
                                     </div>
-                                    <div class="carousel-item w-auto" data-bs-interval="5000">
+                                    <div class="carousel-item" data-bs-interval="5000">
                                         <img src="images/dmitry-dreyer-gHho4FE4Ga0-unsplash.jpg"
-                                            class="d-none d-xl-block" alt="...">
+                                            class="d-none d-xl-block" alt="people planting">
                                     </div>
                                 </div>
                             </div>
