--- a/home.html
+++ b/home.html
@@ -29,10 +29,7 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">News</a>
-                    </li>
-                    <li>
-                        <a href="#">Global Marketplace</a>
+                        <a href="#">Global-Marketplace</a>
                     </li>
                     <li>
                         <a href="#">Crops <i class="icon ion-md-arrow-dropdown"></i></a>
