food section done

--- a/food-crop.html
+++ b/food-crop.html
@@ -367,7 +367,7 @@
                         &nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow millets</a>
+                        <a href="./millets.html" class="btn1">Start millet farming</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -375,16 +375,16 @@
             </div>
             <div class="box4">
                 <div class="overlay-img">
-                    <div class="groundnut-image">
+                    <div class="peanut-image">
                         <div class="overlay-2">
-                        <h1>Groundnut</h1>
+                        <h1>Peanut</h1>
                     </div>
                     </div>
                     <p class="crop-description">
-                        Groundnut, also known as the peanut,goober,pindar or monkey nut, and taxonomically classified as Arachis hypogaea, is a legume crop grown mainly for its edible seeds. It is widely grown in the tropics and subtropics, being important to both small and large commercial producers. It is classified as both a grain legume[4] and, due to its high oil content, an oil crop.&nbsp&nbsp <a href="#">Read More</a>
+                        Peanut, also known as the groundnut,goober,pindar or monkey nut, and taxonomically classified as Arachis hypogaea, is a legume crop grown mainly for its edible seeds. It is widely grown in the tropics and subtropics, being important to both small and large commercial producers. It is classified as both a grain legume[4] and, due to its high oil content, an oil crop.&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow groundnut</a>
+                        <a href="./peanut.html" class="btn1">How to grow peanut</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -401,7 +401,7 @@
                         A sugar beet is a plant whose root contains a high concentration of sucrose and which is grown commercially for sugar production. In plant breeding it is known as the Altissima cultivar group of the common beet (Beta vulgaris).&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow sugar beet</a>
+                        <a href="./sugar-beet.html" class="btn1">How to grow sugar beet</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -418,7 +418,7 @@
                         Cocoa, highly concentrated powder made from chocolate liquor—a paste prepared from cocoa beans, the fruit of the cacao—and used in beverages and as a flavouring ingredient. Cocoa is the key ingredient in chocolate and chocolate confections.&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow cocoa</a>
+                        <a href="./cocoa.html" class="btn1">How to grow cocoa</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -435,7 +435,7 @@
                         Cassava, (Manihot esculenta), also called manioc, mandioca, or yuca, tuberous edible plant of the spurge family (Euphorbiaceae) from the American tropics. It is cultivated throughout the tropical world for its tuberous roots, from which cassava flour, breads, tapioca, a laundry starch, and an alcoholic beverage are derived.&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow cassava</a>
+                        <a href="./cassava.html" class="btn1">How to grow cassava</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -452,7 +452,7 @@
                         Cocoyam(Taro) is a common name for the corms and tubers of several plants in the family Araceae. It is a perennial, tropical plant primarily grown as a root vegetable for its edible starchy corm, and as a leaf vegetable and is considered a staple in African, Oceanic and Asian cultures. &nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow cocoyam</a>
+                        <a href="./cocoyam.html" class="btn1">How to grow cocoyam</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -469,7 +469,7 @@
                         The tomato is the edible berry of the plant Solanum lycopersicum, commonly known as a tomato plant. The species originated in western South America and Central America.&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow tomato</a>
+                        <a href="./tomato.html" class="btn1">How to grow tomato</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -486,7 +486,7 @@
                         The term “plantain” refers to a type of banana with a very different flavor profile and culinary application than the sweet, yellow banana with which most people are familiar. Like bananas, plantains are originally from Southeast Asia.&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow plantain</a>
+                        <a href="./plantain.html" class="btn1">How to grow plantain</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -503,7 +503,7 @@
                         The cashew tree is a tropical evergreen tree that produces the cashew seed and the cashew apple pseudofruit. The tree can grow as high as 14 m, but the dwarf cultivars, growing up to 6 m, prove more profitable, with earlier maturity and greater yields&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow cashew</a>
+                        <a href="./cashew.html" class="btn1">How to grow cashew</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -520,7 +520,7 @@
                         The carrot is a root vegetable, usually orange in color, though purple, black, red, white, and yellow cultivars exist. They are a domesticated form of the wild carrot, Daucus carota, native to Europe and Southwestern Asia. The plant probably originated in Persia and was originally cultivated for its leaves and seeds.&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow cashew</a>
+                        <a href="./carrot.html" class="btn1">How to grow carrot</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
@@ -537,7 +537,7 @@
                         Egusi (also known by variations including agusi, ohue, agushi) is the name for the protein-rich seeds of certain cucurbitaceous plants (squash, melon, gourd), which after being dried and ground are used as a major ingredient in West African cuisine.&nbsp&nbsp <a href="#">Read More</a>
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn1">How to grow melon seed(egusi)</a>
+                        <a href="./melon-seed.html" class="btn1">How to grow melon seed(egusi)</a>
                         <br><br><br><br><br><br><br>
                         <a href="#" class="btn2">Images</a>
                     </div>
