--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                     <i class="icon ion-md-close"></i>
                 </div>
                 <a href="#" class="logo">
-                   <span class="agricul">Agricul</span><span class="hub">Hub</span>
+                   <span class="agricul">Agric</span><span class="hub">Hub</span>
                 </a>
                 <ul class="nav-list">
                     <li>
@@ -41,13 +41,13 @@
                                 <a href="#">Herbs <i class="icon ion-md-arrow-dropright"></i></a>
                                 <ul class="sub-menu">
                                     <li>
-                                        <a href="#">Peppermint</a>
+                                        <a href="./peppermint.html">Peppermint</a>
                                     </li>
                                     <li>
-                                        <a href="#">Rosemary</a>
+                                        <a href="./rosemary.html">Rosemary</a>
                                     </li>
                                     <li>
-                                        <a href="#">Thyme</a>
+                                        <a href="./thyme.html">Thyme</a>
                                     </li>
                                     <li>
                                         <a href="#">Lavender</a>
