--- a/cocoyam.html
+++ b/cocoyam.html
@@ -143,5 +143,7 @@
                <p><strong>Origin: </strong>India and Southeast Asia</p>
         </div>
     </main>
+<div class="footer">
+</div>
 </body>
 </html>
