--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
     <script src="./script/app.js"></script>
 
+<footer>
+    footer
+</footer>
 
 </body>
+
 </html>
