--- a/maize.html
+++ b/maize.html
@@ -177,6 +177,7 @@
             <iframe width="700" height="396" src="https://www.youtube.com/embed/ZglIV6e4jFY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </main>
-    
+    <div class="footer">
+</div>
 </body>
 </html>
