--- a/sugar-beet.html
+++ b/sugar-beet.html
@@ -118,6 +118,7 @@
                 If at first you don’t succeed with sugar beets, don’t let it get to you! Try them again, but perhaps consider using a mix, like our Beets & Sweets blend. Or, use another attractant crop like forage brassicas or turnips! Whatever you end up planting, if it’s green and succulent, it’ll draw the wildlife to your plot. So, get out there, get planting, and happy hunting!</p>
         </div>
     </main>
-    <footer></footer>
+    <div class="footer">
+</div>
 </body>
 </html>
