--- a/peanut.html
+++ b/peanut.html
@@ -140,8 +140,7 @@
             </ol>
         </div>
     </main>
-    <footer>
-
-    </footer>
+    <div class="footer">
+    </div>
     </body>
     </html>
