--- a/home.html
+++ b/home.html
@@ -50,25 +50,22 @@
                                         <a href="./thyme.html">Thyme</a>
                                     </li>
                                     <li>
-                                        <a href="#">Lavender</a>
+                                        <a href="./lavender.html">Lavender</a>
                                     </li>
                                     <li>
-                                        <a href="#">German Chamomile</a>
+                                        <a href="./german-chamomile.html">German Chamomile</a>
                                     </li>
                                     <li>
-                                        <a href="#">Sage</a>
+                                        <a href="./sage.html">Sage</a>
                                     </li>
                                     <li>
-                                        <a href="#">Parsley</a>
+                                        <a href="./parsley.html">Parsley</a>
                                     </li>
                                     <li>
-                                        <a href="#">Mint</a>
+                                        <a href="./dill.html">Dill</a>
                                     </li>
                                     <li>
-                                        <a href="#">Dill</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Basil</a>
+                                        <a href="./basil.html">Basil</a>
                                     </li>
                                     <li>
                                         <a href="#">Cilantro / Coriander</a>
