--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="brand-title-mobile" id="brand-title-mobile"><img src="https://img.icons8.com/plasticine/40/000000/leaf.png"/>Agriculhub</div>
         <!----- navbar ----->
         <nav class="navbar">
-           <div class="brand-title"><img src="https://img.icons8.com/plasticine/45/000000/leaf.png"/>Agriculhub</div>
+           <div class="brand-title"><img src="https://img.icons8.com/plasticine/45/000000/leaf.png"/>Agrichub</div>
            <a href="#" class="toggle-button">
                <span class="bar"></span>
                <span class="bar"></span>
