--- a/sign-in.html
+++ b/sign-in.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in to AgriculHub</title>
+    <title>Sign in to AgricHub</title>
     <link rel="stylesheet" href="./css/sign-in.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
     </div>
 
     <div class="sign-in-to-farmer-hub-header-container">
-        <h1>Sign in to AgriculHub</h1>
+        <h1>Sign in to AgricHub</h1>
     </div>
 
     <form>
