--- a/sugar-beet.html
+++ b/sugar-beet.html
@@ -7,7 +7,7 @@
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/sugar-beet.css">
-    <title>Complete Guide On How To grow peanut</title>
+    <title>Complete Guide On How To grow sugar beet</title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
                     <i class="icon ion-md-close"></i>
                 </div>
                 <a href="#" class="logo">
-                   <span class="agricul">Agricul</span><span class="hub">Hub</span>
+                   <span class="agricul">Agric</span><span class="hub">Hub</span>
                 </a>
                 <ul class="nav-list">
                     <li>
