--- a/cocoa.html
+++ b/cocoa.html
@@ -18,7 +18,7 @@
                     <i class="icon ion-md-close"></i>
                 </div>
                 <a href="#" class="logo">
-                   <span class="agricul">Agricul</span><span class="hub">Hub</span>
+                   <span class="agricul">Agric</span><span class="hub">Hub</span>
                 </a>
                 <ul class="nav-list">
                     <li>
