Added beekeeping for begginers

--- a/home.html
+++ b/home.html
@@ -289,7 +289,7 @@
                                 <a href="#">Agricultural principles</a>
                             </li>
                             <li>
-                                <a href="#">Beekeeping for beginners</a>
+                                <a href="./beekeeping4begginers.html">Beekeeping for beginners</a>
                             </li>
                             <li>
                                 <a href="#">How to raise horses</a>
