--- a/care-for-horses.html
+++ b/care-for-horses.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/carrot.css">
-    <title>Complete Guide On How To Grow Carrot</title>
+    <link rel="stylesheet" href="./css/care-for-horses.css">
+    <title>How to care for Horses </title>
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
                     <i class="icon ion-md-close"></i>
                 </div>
                 <a href="#" class="logo">
-                   <span class="agricul">Agric</span><span class="hub">Hub</span>
+                   <span class="agriculture">Agric</span><span class="hub">Hub</span>
                 </a>
                 <ul class="nav-list">
                     <li>
@@ -48,7 +48,7 @@
                                                 <a href="#">Food Crops</a>
                                             </li>
                                         </ul>
-                                        
+
                                     </li>
                                     <li>
                                         <a href="#">Grow Live-stock</a>
@@ -77,20 +77,36 @@
         </div>
         <div class="carrot-intro">
             <div class="overlay">
-            <h1 class="carrot-header">Carrot</h1>
-            <p class="carrot-text">Complete Guide On How To Grow Carrot</p>
+            <h1 class="carrot-header">Horses</h1>
+            <p class="carrot-text">Complete Guide On How To Care For Horses</p>
             </div>
         </div>
     </header>
     <main>
         <div class="carrot-container">
             <p>
-                Garden-grown carrots are full of flavor and texture! They are a popular, long-lasting root vegetable that can be grown in many climates. Learn all about planting, growing, and harvesting carrots.
+                be grown in many climates. Learn all about planting, growing, and harvesting carrots.
             </p>
-            <div class="carrot-img"></div>
+            <div class="horse-img"></div>
             <p>
-                Carrots are easy to grow as long as they are planted in loose, sandy soil during the cooler periods of the growing season—spring and fall (carrots can tolerate frost). Depending on the variety and local growing conditions, carrots may take anywhere from 2 to 4 months to mature. Plant them in the spring and summer for a continuous harvest through fall!
+            Horses can be easy and rewarding to cre for provided that you malke sure to follow thes steps:
+             At the very least a horse needs:
+                -Pasture free from hazards such as holes, rusty farm machinery and loose wire fences.
             </p>
+                <ol type>
+                <li>Pasture free from hazards such as holes, rusty farm machinery and loose wire fences.</li>
+                <li>     Safe fencing such as wooden, plastic, or vinyl rails, or mesh wire fencing.</li>
+                <li>     Grass for grazing or equivalent amount of good quality hay.</li>
+                <li>   Unlimited supply of fresh clean water, heated if necessary in sub-freezing temperatures.
+    Access to salt.</li>
+                <li>Shelter from wet or wintry weather and shade in summer.</li>
+                <li>    Shelter from wet or wintry weather and shade in summer.</li>
+                <li>    A dry clean area to lie down.</li>
+                    <li>    Daily monitoring for injury or illness.</li>
+                    <li>    Companionship, either with another horse, donkey, mule or pony or another animal such as a sheep or goa</li>
+                </ol>
+
+
             <h1>THE IMPORTANCE OF GOOD SOIL</h1>
             <p>
                 Proper soil preparation is extremely important for carrot growing! If the carrot roots can’t easily grow unobstructed, it can lead to stunted and misshapen crops.
@@ -114,7 +130,7 @@
             <p><strong>WHEN TO PLANT CARROTS</strong></p>
             <br><br>
             <ol>
-                <li>For a summer harvest, sow seeds outdoors 3 to 5 weeks before the last spring frost date. Find your local frost dates here. 
+                <li>For a summer harvest, sow seeds outdoors 3 to 5 weeks before the last spring frost date. Find your local frost dates here.
                 </li>
                 <br><br>
                 <p><strong>To ensure a continuous harvest, plant a new round of seeds every 3 weeks through late spring.</strong></p>
