--- a/home.html
+++ b/home.html
@@ -323,8 +323,9 @@
     </div>
     </div>
     <footer>
-
     </footer>-->
     <script src="./script/home.js"></script>
 </body>
+<div class="footer">
+</div>
 </html>
