--- a/beekeeping4begginers.html
+++ b/beekeeping4begginers.html
@@ -20,6 +20,10 @@
         margin: 100px;
 
     }
+    p{
+        font-size: medium;
+        margin: 10px;
+    }
 </style>
 <body>
     <nav>
@@ -326,6 +330,26 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
             allowfullscreen>
         </iframe>
+        <h1 id='headerH1'>BEEKEEPING IS LOCAL.</h1>
+        <p>Bees are directly influenced by their environment, therefore, their behavior and</p>
+        <p>success varies greatly across climates. For instance, the busy foraging season for</p>
+        <p>bees will be much longer in the warmer south than it will be in the north.</p>
+        <p>Familiarize yourself with what beekeeping looks like in your neck of the woods. We</p>
+        <p>recommend joining your local beekeepers club or association, and finding an</p>
+        <p>experienced mentor in your area.</p>
+        <br/><br/><br/><br/>
+        <h1 id='headerH1'>IS BEEKEEPING FOR ME?</h1>
+        <p>General maintenance requires periodic inspections during the warm months to make sure your queen is laying eggs, your workers are building up</p>
+        <p>honey stores, and your colony has enough space to expand. In the cold months, the colony clusters and eats through their honey stores, only</p>
+        <p>emerging when the temperature is above freezing to eliminate waste. Inspections are discouraged during this time to keep from releasing precious</p>
+        <p>heat from the hive. Management time and style will depend on your climate, your hive style, and your particular bees. All colonies are unique, and</p>
+        <p>each beekeeper will have a different experience.</p>
+        <br/><br/><br/><br/>
+        <h1 id='headerH1'>A GENERAL OVERVIEW</h1>
+        <p>Apis mellifera, or the European honeybee is the most commonly kept species, and the only species kept in America. They are just 1 species out of</p>
+        <p>20,000 known bee species worldwide. North America alone is home to 4,400 bee species including social bumblebee colonies, solitary tunnel nesting bees, </p>
+        <p>and solitary ground nesting bees.</p>
+        <br/><br/>
     </div>
 </body>
 </html>
