further developed horse page

--- a/care-for-horses.html
+++ b/care-for-horses.html
@@ -75,58 +75,60 @@
                 </ul>
             </nav>
         </div>
-        <div class="carrot-intro">
+        <div class="horse-intro">
             <div class="overlay">
-            <h1 class="carrot-header">Horses</h1>
-            <p class="carrot-text">Complete Guide On How To Care For Horses</p>
+            <h1 class="horse-header">Horses</h1>
+            <p class="horse-text">Complete Guide On How To Care For Horses</p>
             </div>
         </div>
     </header>
     <main>
-        <div class="carrot-container">
+        <div class="horse-container">
             <p>
-                be grown in many climates. Learn all about planting, growing, and harvesting carrots.
+                Horses vary in size, body shape and temperament. Although their working lives (the period when they can be ridden or driven) may be much shorter,
+                they can live well into their thirties or longer! Learn everything there is to know about caring for your horses here!
             </p>
             <div class="horse-img"></div>
             <p>
-            Horses can be easy and rewarding to cre for provided that you malke sure to follow thes steps:
+            Horses can be easy and rewarding to care for provided that you make sure to follow these steps:
              At the very least a horse needs:
-                -Pasture free from hazards such as holes, rusty farm machinery and loose wire fences.
             </p>
                 <ol type>
                 <li>Pasture free from hazards such as holes, rusty farm machinery and loose wire fences.</li>
                 <li>     Safe fencing such as wooden, plastic, or vinyl rails, or mesh wire fencing.</li>
                 <li>     Grass for grazing or equivalent amount of good quality hay.</li>
-                <li>   Unlimited supply of fresh clean water, heated if necessary in sub-freezing temperatures.
-    Access to salt.</li>
-                <li>Shelter from wet or wintry weather and shade in summer.</li>
+                <li>   Unlimited supply of fresh clean water, heated if necessary in sub-freezing temperatures.</li>
+                    <li>Access to salt.</li>
                 <li>    Shelter from wet or wintry weather and shade in summer.</li>
                 <li>    A dry clean area to lie down.</li>
                     <li>    Daily monitoring for injury or illness.</li>
-                    <li>    Companionship, either with another horse, donkey, mule or pony or another animal such as a sheep or goa</li>
+                    <li>    Companionship, either with another horse, donkey, mule or pony or another animal such as a sheep or goat</li>
                 </ol>
 
 
-            <h1>THE IMPORTANCE OF GOOD SOIL</h1>
+            <h1>FEEDING YOUR HORSE</h1>
             <p>
-                Proper soil preparation is extremely important for carrot growing! If the carrot roots can’t easily grow unobstructed, it can lead to stunted and misshapen crops.
-            </p>
+Good horse care includes quality roughage. While grass is a horse's natural food, it's not always available, and may not be adequate in some situations.</p>
             <br><br>
             <p>
-                Here’s what to do to prepare your garden soil:
-            </p>
+            For starters snot all plants that grow in pastures are good for your horse, so it is important to know which plants
+            are <a target="_blank" href="https://www.thesprucepets.com/plants-toxic-to-horses-4121978"> toxic for your horse</a> so that you can eradicate them from the field you plan to leave your horse to graze on.</p>
             <br><br>
+            <h2> All About Hay! </h2>
+            <p> When good pasture grass is not available, hay is the single most important source.  In its most basic form, hay is dried grasses and plants. There are a few key ideas to keep in mind when feeding your horse hay:</p>
             <ol>
-                <li>Till down 12 inches and make sure there are no rocks, stones, or even soil clumps that could impede your carrots’ growth.</li>
-                <li>Avoid amending the soil with nitrogen-rich material such as manure and fertilizer, which can cause carrots to fork and grow little side roots. Instead, work in old coffee grounds. </li>
-                <li>If your ground soil is heavy clay or too rocky, you should consider planting carrots in a raised bed at least 12 inches deep and filled with airy, loamy soil (not clay nor silt).</li>
+                <li>Firstly you want to check if your horse breed can survive on hay alone or if it needs grain concetrates or pellets to supplement its diet.</li>
+                <li>When buying hay make sure that it was baled properly.  If hay isn't baled properly, molds can grow causing dusty hay. </li>
+                <li>Just how much your horse will need will depend on its weight. According to the Ontario Ministry of Agriculture, a full-grown horse should eat about 12 to 15 pounds (5.4 to 6.8 kg) of hay a day.1 That is 1.5 percent to 3 percent of its body weight, if it weighs about 1,000 pounds (450 kg). But, some draft horses, especially ones that work hard, will need rather more than the normal ratio of hay. This is why it is so important to regularly monitor your horse’s condition, </li>
+                <li> Like any food, hay loses some of its nutrients the longer it sits. There are no 'best before' dates on hay. However, as a general rule of thumb it is best to consume Hay within a year of when it was made</li>
             </ol>
             <p>
-                Finally: Don’t expect to get perfectly straight “grocery store” carrots. Your carrots will still taste better, whatever their shape!
+                Finally: it is important to remember that
+                fresh clean water should be available to horses at all times. Insufficient water can contribute to poor health. Chronic dehydration can cause a horse to lose weight and be in poor condition. Dehydration can be deadly as lack of water can cause impactions leading to colics, especially during the winter months, when a horse's diet may consist almost solely of dry hay.  Additionally, unhygenic water and watering equipment such as troughs and buckets can also harbor bacteria or viruses that can make your horse sick.
             </p>
-            <div class="misshapen-img"></div>
-            <h3>PLANTING</h3>
             <div class="planting-img"></div>
+            <h3>PLANTING</h3>
+
             <p><strong>WHEN TO PLANT CARROTS</strong></p>
             <br><br>
             <ol>
