--- a/care-for-horses.html
+++ b/care-for-horses.html
@@ -75,22 +75,16 @@
                 </ul>
             </nav>
         </div>
-<<<<<<< HEAD
+
         <div class="horse-intro">
             <div class="overlay">
             <h1 class="horse-header">Horses</h1>
             <p class="horse-text">Complete Guide On How To Care For Horses</p>
-=======
-        <div class="carrot-intro">
-            <div class="overlay">
-            <h1 class="carrot-header">Horses</h1>
-            <p class="carrot-text">Complete Guide On How To Care For Horses</p>
->>>>>>> f4ceaff1ba1810bcdf7be6da24df2d59fe0b0e0c
+
             </div>
         </div>
     </header>
     <main>
-<<<<<<< HEAD
         <div class="horse-container">
             <p>
                 Horses vary in size, body shape and temperament. Although their working lives (the period when they can be ridden or driven) may be much shorter,
@@ -100,23 +94,8 @@
             <p>
             Horses can be easy and rewarding to care for provided that you make sure to follow these steps:
              At the very least a horse needs:
-=======
-        <div class="carrot-container">
-            <p>
-                be grown in many climates. Learn all about planting, growing, and harvesting carrots.
             </p>
-            <div class="horse-img"></div>
-            <p>
-            Horses can be easy and rewarding to cre for provided that you malke sure to follow thes steps:
-             At the very least a horse needs:
-                -Pasture free from hazards such as holes, rusty farm machinery and loose wire fences.
->>>>>>> f4ceaff1ba1810bcdf7be6da24df2d59fe0b0e0c
-            </p>
-                <ol type>
-                <li>Pasture free from hazards such as holes, rusty farm machinery and loose wire fences.</li>
-                <li>     Safe fencing such as wooden, plastic, or vinyl rails, or mesh wire fencing.</li>
-                <li>     Grass for grazing or equivalent amount of good quality hay.</li>
-<<<<<<< HEAD
+                <ol>
                 <li>   Unlimited supply of fresh clean water, heated if necessary in sub-freezing temperatures.</li>
                     <li>Access to salt.</li>
                 <li>    Shelter from wet or wintry weather and shade in summer.</li>
@@ -125,19 +104,19 @@
                     <li>    Companionship, either with another horse, donkey, mule or pony or another animal such as a sheep or goat</li>
                 </ol>
 
-
             <h1>FEEDING YOUR HORSE</h1>
+            <div class="feed-img"></div>
             <p>
-Good horse care includes quality roughage. While grass is a horse's natural food, it's not always available, and may not be adequate in some situations.</p>
+            Good horse care includes quality roughage. While grass is a horse's natural food, it's not always available, and may not be adequate in some situations.</p>
             <br><br>
             <p>
-            For starters snot all plants that grow in pastures are good for your horse, so it is important to know which plants
+            For starters not all plants that grow in pastures are good for your horse, so it is important to know which plants
             are <a target="_blank" href="https://www.thesprucepets.com/plants-toxic-to-horses-4121978"> toxic for your horse</a> so that you can eradicate them from the field you plan to leave your horse to graze on.</p>
             <br><br>
-            <h2> All About Hay! </h2>
+            <h3> All About Hay! </h3>
             <p> When good pasture grass is not available, hay is the single most important source.  In its most basic form, hay is dried grasses and plants. There are a few key ideas to keep in mind when feeding your horse hay:</p>
             <ol>
-                <li>Firstly you want to check if your horse breed can survive on hay alone or if it needs grain concetrates or pellets to supplement its diet.</li>
+                <li>Firstly you want to check if your horse breed can survive on hay alone or if it needs grain concentrates or pellets to supplement its diet.</li>
                 <li>When buying hay make sure that it was baled properly.  If hay isn't baled properly, molds can grow causing dusty hay. </li>
                 <li>Just how much your horse will need will depend on its weight. According to the Ontario Ministry of Agriculture, a full-grown horse should eat about 12 to 15 pounds (5.4 to 6.8 kg) of hay a day.1 That is 1.5 percent to 3 percent of its body weight, if it weighs about 1,000 pounds (450 kg). But, some draft horses, especially ones that work hard, will need rather more than the normal ratio of hay. This is why it is so important to regularly monitor your horse’s condition, </li>
                 <li> Like any food, hay loses some of its nutrients the longer it sits. There are no 'best before' dates on hay. However, as a general rule of thumb it is best to consume Hay within a year of when it was made</li>
@@ -146,52 +125,51 @@ Good horse care includes quality roughage. While grass is a horse's natural food
                 Finally: it is important to remember that
                 fresh clean water should be available to horses at all times. Insufficient water can contribute to poor health. Chronic dehydration can cause a horse to lose weight and be in poor condition. Dehydration can be deadly as lack of water can cause impactions leading to colics, especially during the winter months, when a horse's diet may consist almost solely of dry hay.  Additionally, unhygenic water and watering equipment such as troughs and buckets can also harbor bacteria or viruses that can make your horse sick.
             </p>
-            <div class="planting-img"></div>
-            <h3>PLANTING</h3>
 
-=======
-                <li>   Unlimited supply of fresh clean water, heated if necessary in sub-freezing temperatures.
-    Access to salt.</li>
-                <li>Shelter from wet or wintry weather and shade in summer.</li>
-                <li>    Shelter from wet or wintry weather and shade in summer.</li>
-                <li>    A dry clean area to lie down.</li>
-                    <li>    Daily monitoring for injury or illness.</li>
-                    <li>    Companionship, either with another horse, donkey, mule or pony or another animal such as a sheep or goa</li>
-                </ol>
-
-
-            <h1>THE IMPORTANCE OF GOOD SOIL</h1>
+            <h1>GROOMING YOUR HORSE/HOOF MAINTANANCE</h1>
+            <div class="grooming-img"></div>
             <p>
-                Proper soil preparation is extremely important for carrot growing! If the carrot roots can’t easily grow unobstructed, it can lead to stunted and misshapen crops.
+                Proper grooming of your horse is extremely important for its health and well being. Much like human beings, improper grooming and care of a horse's body can lead to
+                a rapid deterioration of its health!
+                 Grooming also encourages good blood circulation and gives you the chance to check over your horse's body for any external wounds, especially the parts of
+                the body that will come into contact with tack. Stable horses should be groomed on a regular basis, always before putting their tack on and after removing it.
             </p>
             <br><br>
+              <p><strong>How to Groom a Horse</strong></p>
             <p>
-                Here’s what to do to prepare your garden soil:
+                Here’s what to do to groom your horse and maintain its health! :
             </p>
             <br><br>
             <ol>
-                <li>Till down 12 inches and make sure there are no rocks, stones, or even soil clumps that could impede your carrots’ growth.</li>
-                <li>Avoid amending the soil with nitrogen-rich material such as manure and fertilizer, which can cause carrots to fork and grow little side roots. Instead, work in old coffee grounds. </li>
-                <li>If your ground soil is heavy clay or too rocky, you should consider planting carrots in a raised bed at least 12 inches deep and filled with airy, loamy soil (not clay nor silt).</li>
+                <li>Start with the hooves: hold the hoof and with the hoof pick pry out any dirt, manure, or grit lodged in the frog or sole of the foot, picking from the heel to the toes.
+                    Check for any injury and signs of thrush, grease heel, or other problems, and take note of any cracks in the wall of the hoof, so you can consult with your farrier as
+                    to what should be done. Gently place the foot back down on the ground and continue until all four feet are done .</li>
+                <li>Next is the curry comb: use the comb across horse's coat, moving it in circular motions against the natural direction of the fur.</li>
+                <li> After that use the brush over your horse's coat, to brush off any dirt or dust that the curry comb might have brought to the surface.</li>
+                <li>After that, comb its mane and tail: Start with a mane comb or brush at the bottom of the strands and brush downward in sections until you can smoothly comb from the top to the bottom.
+                    When brushing the tail, stand to one side and pull the tail gently over to you, making sure you are out of the way should the horse kick. </li>
+                <li>Finally, with a soft damp cloth, gently clean your horse’s muzzle and eyes. A bit of tearing at the corner of the eye is not uncommon, but take note of excess tearing, redness,
+                    or swelling. Eye infections need to be treated promptly. </li>
             </ol>
             <p>
-                Finally: Don’t expect to get perfectly straight “grocery store” carrots. Your carrots will still taste better, whatever their shape!
+                Finally be sure remember to pay attention to your horse's behaviour while grooming. Some horses may be more delicate or fussy than others about having things like their ears or belly handled, so go slowly and be careful not to pinch or pull hairs.
+                If while brushing him, your horse reacts by laying back his ears or swishing his tail in agitation, he is telling you that the brushing is too vigorous and that you should be more
+                delicate.
             </p>
-            <div class="misshapen-img"></div>
-            <h3>PLANTING</h3>
-            <div class="planting-img"></div>
->>>>>>> f4ceaff1ba1810bcdf7be6da24df2d59fe0b0e0c
-            <p><strong>WHEN TO PLANT CARROTS</strong></p>
+            <h3>TRAINING</h3>
+            <div class="training-img"></div>
+            <p>Lastly, regardless if you plan on using your horse to ride him or for draft, it is essential to ensure that your horse gets a regular amount
+                of exercise each day, and has some time each day in a large field or pasture so that he can run and play with his fellow horses/animal companions.
+             As a minimum form of exercise, some daily walking is required; 15 or 20 minutes should do the trick. </p>
+           <p>When riding, the amount of exercise must be governed by how fit the horse is, and a daily routine should be established to guarantee that fitness is attained. Getting a horse fit requires a gradual increase within the exercise regimen. Once the horse is fully fit, reassessment of the required amount of exercise can be determined by basic common sense. For example, a horse that has worked hard one day will not need an extensive work session the next day; a 20 minute walk to work the stiffness out of the joints or take away any swelling in the legs is all that is necessary. Keeping a horse in top condition requires about two hours of exercise every day,
+               whether it be led or ridden. To keep the back and girth regions toned, the horse should be saddled and ridden regularly.</p>
             <br><br>
-            <ol>
-                <li>For a summer harvest, sow seeds outdoors 3 to 5 weeks before the last spring frost date. Find your local frost dates here.
-                </li>
-                <br><br>
-                <p><strong>To ensure a continuous harvest, plant a new round of seeds every 3 weeks through late spring.</strong></p>
-                <br><br>
-                <li>For a fall harvest, sow seeds in mid- to late summer—starting about 10 weeks before your first fall frost.</li>
-            </ol>
-            <h3>HOOSING AND PREPARING A PLANTING SITE</h3>
+            <p> Regardless of your horse's breed or type of work it does, it is optimal to create an exercise plan for him to ensure a healthy and balanced exercise routine.
+            Whilst the types of exercises can vary depending on your horse's age, breed and starting level of health, in general the exercise routine for your horse will take
+                 are <a target="_blank" href="https://www.bhs.org.uk/advice-and-information/horse-care/horse-health-and-fitness"> this form</a>.
+                Before proceeding to starting a particular exercise/training routine, it is always recommended to talk to your horses's vet first, to ensure that the routine is appropriate
+                for your particular horse.</p>
+            <h3> ESENTIAL HORSE CARE</h3>
             <div class="site-img"></div>
             <ol>
                 <li>Carrots need a location that receives full sunlight, though they can tolerate partial shade, too.</li>
@@ -210,46 +188,8 @@ Good horse care includes quality roughage. While grass is a horse's natural food
                 <p>Check out this video to learn how to plant carrots. </p>
                 <iframe width="738" height="405" src="https://www.youtube.com/embed/ttKbPzeadNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </ol>
-            <h3>CARE</h3>
-            <div class="caring-img"></div>
-            <ol>
-                <li>Gently mulch carrots to retain moisture, speed germination, and block the sun from hitting the roots directly.</li>
-                <li>When seedlings are an inch tall, thin so that they stand 3 to 4 inches apart. Snip tops with scissors instead of pulling them out to prevent damage to the fragile roots of the remaining plants.</li>
-                <li>Water at least one inch (about ½ gallon per square foot) per week to start, then two inches as roots mature.</li>
-                <li>Weed diligently, but be careful not to disturb the young carrots’ roots while doing so.</li>
-                <li>Fertilize with a low-nitogen but high-potassium and -phosphate fertilizer 5 to 6 weeks after sowing. (Note that excess nitrogen in the soil promotes top, or foliage, growth—not roots.)</li>
-                <li>See more tips for growing carrots.</li>
-            </ol>
-            <h3>PESTS/DISEASES</h3>
-            <div class="pest-img"></div>
-            <ol>
-                <li>Carrot rust flies</li>
-                <li>Root-knot nematodes</li>
-                <li>Black (Itersonilia) canker</li>
-                <li>Flea Beetles</li>
-                <li>Wireworms</li>
-                <li><strong>Aster Yellow Disease</strong>will cause shortened and discolored carrot tops and hairy roots. This disease is spread by pests as they feed from plant to plant. Keep weeds down and invest in a control plan for pests such as leafhoppers. This disease has the ability to overwinter.</li>
-            </ol>
-            <h1>HARVEST/STORAGE</h1>
-            <h3>HOW AND WHEN TO HARVEST CARROTS</h3>
-            <ol>
-                <li>Generally, the smaller the carrot, the better the taste.</li>
-                <li>Harvest whenever desired maturity or size is reached. Carrots should be about as wide as your thumb or at least ½ of an inch in diameter.</li>
-                <li>If you’re growing carrots in the spring and early summer, harvest before daily temperatures get too hot, as the heat can cause carrot roots to grow fibrous.</li>
-                <li>Carrots taste much better after one or more frosts. (A frost encourages the plant to start storing energy—sugars—in its root for later use.) Following the first hard frost in the fall, cover carrot tops with an 18-inch layer of shredded leaves to preserve them for harvesting later.</li>
-                <li><strong>Note:</strong>Carrots are biennial. If you fail to harvest and leave the carrots in the ground, the tops will flower and proeduce seeds in the next year.</li>
-            </ol>
-            <h1>HOW DO YOU STORE FRESH CARROTS?</h1>
-            <div class="fresh-carrot-img"></div>
-            <ol>
-                <li>To store freshly-harvested carrots, twist or cut off all but ½ inch of the tops, scrub off any dirt under cold running water, and air-dry. Seal in airtight plastic bags, and refrigerate. If you simply put fresh carrots in the refrigerator, they’ll go limp in a few hours.</li>
-                <li>You may leave mature carrots in the soil for temporary storage if the ground will not freeze and pests aren’t a problem.</li>
-                <li>Carrots can also be stored in tubs of moist sand or dry sawdust in a cool, dry area.</li>
-            </ol>
-            <h3>VARIETIES</h3>
-            <p>Carrots come in a rainbow of colors, sizes, and shapes.</p>
-            <div class="carrot-colors-img"></div>
-            <br><br>
+            <h3> Popular horse breeds</h3>
+            <div class="breeds-img"></div>
             <ol>
                 <li><strong>Little Finger:</strong>heirloom; a small Nantes type of carrot only 4 inches long and one inch thick; good for containers. </li>
                 <li><strong>Nantes:</strong>cylindrical (not tapered); 6 to 7 inches; exceptionally sweet; crisp texture.</li>
